Crashes with "Floating point exception" when inserting sfilter=marq into transcode chain. Changing vcodec, venc doesn't eliminate the crash. compiling with --enable-freetype and without --enable-freetype doesn't change a thing, changing scale=xx doesn't affect it.
Windows nightly version crashes too (tested with 20080702-1913)
Info from Linux debug version follows:
compile options:
./configure --disable-hal --disable-dbus --disable-dbus-control --disable-release --enable-switcher --disable-audioscrobbler --disable-taglib --enable-live555 --disable-smb --enable-ogg --enable-mkv --enable-id3tag --enable-ffmpeg --enable-faad --enable-flac --enable-png --enable-x264 --disable-x11 --disable-glx --disable-opengl --disable-qt4 --disable-ncurses --disable-bonjour --disable-skins2 --prefix=/home/vytautas/vlc-test --disable-schroedinger --disable-kate --disable-libgcrypt --disable-remoteosd --disable-libmpeg2 --disable-optimizations --enable-debug --disable-sdl --disable-xvmc --disable-fb --disable-oss --disable-alsa -disable-xvideo --disable-dvdread --disable-dvdnav --enable-freetype
output with gdb:
vytautas@vbox:~/vlc09-test1/vlc-0.9.0-test1$ libtool --mode=execute gdb --args /home/vytautas/vlc09-test1/vlc-0.9.0-test1/src/vlc --reset-config --reset-plugins-cache -v3 -I rc --freetype-font /usr/share/fonts/truetype/ttf-dejavu/DejaVuSansMono-Bold.ttf udp://@239.252.10.1:5000 --sout '#transcode{venc=x264,acodec=mp3,vb=300,ab=64,samplerate=24000,scale=1,channels=1,sfilter=marq,threads=3}:std{access=http,mux=ts,dst=192.168.144.78:8586}'
(gdb) run
Starting program: /home/vytautas/vlc09-test1/vlc-0.9.0-test1/src/vlc --reset-config --reset-plugins-cache -v3 -I rc --freetype-font /usr/share/fonts/truetype/ttf-dejavu/DejaVuSansMono-Bold.ttf udp://@239.252.10.1:5000 --sout \#transcode\{venc=x264,acodec=mp3,vb=300,ab=64,samplerate=24000,scale=1,channels=1,sfilter=marq,threads=3\}:std\{access=http,mux=ts,dst=192.168.144.78:8586\}
[Thread debugging using libthread_db enabled]
VLC media player 0.9.0-test1 Grishenko
[00000001] main libvlc debug: VLC media player - version 0.9.0-test1 Grishenko - (c) 1996-2008 the VideoLAN team
[00000001] main libvlc debug: libvlc was configured with ./configure '--disable-hal' '--disable-dbus' '--disable-dbus-control' '--disable-release' '--enable-switcher' '--disable-audioscrobbler' '--disable-taglib' '--enable-live555' '--disable-smb' '--enable-ogg' '--enable-mkv' '--enable-id3tag' '--enable-ffmpeg' '--enable-faad' '--enable-flac' '--enable-png' '--enable-x264' '--disable-x11' '--disable-glx' '--disable-opengl' '--disable-qt4' '--disable-ncurses' '--disable-bonjour' '--disable-skins2' '--prefix=/home/vytautas/vlc-test' '--disable-schroedinger' '--disable-kate' '--disable-libgcrypt' '--disable-remoteosd' '--disable-libmpeg2' '--disable-optimizations' '--enable-debug' '--disable-sdl' '--disable-xvmc' '--disable-fb' '--disable-oss' '--disable-alsa' '-disable-xvideo' '--disable-dvdread' '--disable-dvdnav' '--enable-freetype'
[00000001] main libvlc debug: translation test: code is "C"
[00000001] main libvlc debug: checking builtin modules
[00000001] main libvlc debug: checking plugin modules
[00000001] main libvlc debug: removing plugins cache file /home/vytautas/.cache/vlc/plugins-04041e.dat
[00000001] main libvlc debug: recursively browsing `/home/vytautas/vlc-test/lib/vlc'
[New Thread 0xb7bbc6b0 (LWP 10864)]
[00000001] main libvlc warning: cannot load module `/home/vytautas/vlc-test/lib/vlc/access/libdvdnav_plugin.so' (/home/vytautas/vlc09/vlc/extras/contrib/lib/libdvdread.so.4: undefined symbol: dvdcss_interface_2)
[00000001] main libvlc warning: cannot load module `/home/vytautas/vlc-test/lib/vlc/access/libdvdread_plugin.so' (/home/vytautas/vlc09/vlc/extras/contrib/lib/libdvdread.so.4: undefined symbol: dvdcss_interface_2)
[00000001] main libvlc debug: module bank initialized, found 243 modules
[00000001] main libvlc debug: opening config file (/home/vytautas/.config/vlc/vlcrc)
[00000001] main libvlc debug: opening config file (/home/vytautas/.config/vlc/vlcrc)
[00000001] main libvlc debug: opening config file (/home/vytautas/.config/vlc/vlcrc)
[00000001] main libvlc debug: CPU has capabilities 486 586 MMX MMXEXT SSE SSE2 FPU
[00000001] main libvlc debug: looking for memcpy module: 3 candidates
[00000001] main libvlc debug: using memcpy module "memcpymmxext"
[New Thread 0xb5110b90 (LWP 10867)]
[00000326] main interaction debug: thread started
[00000326] main interaction debug: thread 3037793168 (Interaction control) created at priority 0 (interface/interaction.c:379)
[00000328] main input debug: Input is a meta file: disabling unneeded options
[00000328] main input debug: `file/xspf-open:///home/vytautas/.local/share/vlc/ml.xspf' gives access `file' demux `xspf-open' path `/home/vytautas/.local/share/vlc/ml.xspf'
[00000328] main input debug: creating access 'file' path='/home/vytautas/.local/share/vlc/ml.xspf'
[00000329] main access debug: looking for access module: 3 candidates
[00000329] access_mmap access debug: opening file /home/vytautas/.local/share/vlc/ml.xspf
[00000329] main access debug: using access module "access_mmap"
[00000329] main access debug: TIMER module_Need() : 2.243 ms - Total 2.243 ms / 1 intvls (Avg 2.243 ms)
[00000330] main stream debug: Using AStream*Block
[00000330] main stream debug: pre buffering
[00000330] main stream debug: received first data for our buffer
[00000329] access_mmap access debug: at end of memory mapped file
[00000328] main input debug: creating demux: access='file' demux='xspf-open' path='/home/vytautas/.local/share/vlc/ml.xspf'
[00000331] main demux debug: looking for demux module: 1 candidate
[00000331] playlist demux debug: using XSPF playlist reader
[00000331] main demux debug: using demux module "playlist"
[00000331] main demux debug: TIMER module_Need() : 2.128 ms - Total 2.128 ms / 1 intvls (Avg 2.128 ms)
[00000328] main input debug: `file/xspf-open:///home/vytautas/.local/share/vlc/ml.xspf' successfully opened
[00000332] main xml debug: looking for xml module: 2 candidates
[00000332] main xml debug: using xml module "xml"
[00000332] main xml debug: TIMER module_Need() : 1.399 ms - Total 1.399 ms / 1 intvls (Avg 1.399 ms)
[00000329] access_mmap access debug: at end of memory mapped file
[00000331] playlist demux debug: parsed 0 tracks successfully
[00000332] main xml debug: removing module "xml"
[00000328] main input debug: EOF reached
[00000328] main input debug: control type=1
[00000331] main demux debug: removing module "playlist"
[00000329] main access debug: removing module "access_mmap"
[00000328] main input debug: TIMER input launching for 'Media Library' : 17.438 ms - Total 17.438 ms / 1 intvls (Avg 17.438 ms)
[New Thread 0xb490fb90 (LWP 10868)]
[00000333] main generic debug: waiting for thread completion
[00000333] main generic debug: thread started
[00000333] main generic debug: thread 3029400464 (preparser) created at priority 0 (playlist/thread.c:78)
[New Thread 0xb410eb90 (LWP 10869)]
[00000334] main generic debug: waiting for thread completion
[00000334] main generic debug: thread started
[00000334] main generic debug: thread 3021007760 (fetcher) created at priority 0 (playlist/thread.c:106)
[New Thread 0xb390db90 (LWP 10870)]
[00000327] main playlist debug: thread started
[00000327] main playlist debug: waiting for thread completion
[00000327] main playlist debug: rebuilding array of current - root Playlist
[00000327] main playlist debug: rebuild done - 0 items, index -1
[00000327] main playlist debug: thread 3012615056 (playlist) created at priority 0 (playlist/thread.c:115)
[00000335] main interface debug: looking for interface module: 1 candidate
[00000335] main interface debug: using interface module "hotkeys"
[00000335] main interface debug: TIMER module_Need() : 1.194 ms - Total 1.194 ms / 1 intvls (Avg 1.194 ms)
[New Thread 0xb310cb90 (LWP 10871)]
[00000335] main interface debug: thread started
[00000335] main interface debug: thread 3004222352 (interface) created at priority 0 (interface/interface.c:150)
[00000336] main interface debug: looking for interface module: 1 candidate
[00000336] main interface debug: using interface module "screensaver"
[00000336] main interface debug: TIMER module_Need() : 1.612 ms - Total 1.612 ms / 1 intvls (Avg 1.612 ms)
[New Thread 0xb290bb90 (LWP 10872)]
[00000336] main interface debug: thread started
[00000336] main interface debug: thread 2995829648 (interface) created at priority 0 (interface/interface.c:150)
[00000327] main playlist debug: adding item `udp://@239.252.10.1:5000' ( udp://@239.252.10.1:5000 )
[00000327] main playlist debug: rebuilding array of current - root Playlist
[00000327] main playlist debug: rebuild done - 1 items, index -1
[00000337] main interface debug: looking for interface module: 14 candidates
[New Thread 0xb210ab90 (LWP 10873)]
[00000337] main interface debug: using interface module "signals"
[00000337] main interface debug: TIMER module_Need() : 10.394 ms - Total 10.394 ms / 1 intvls (Avg 10.394 ms)
[New Thread 0xb1909b90 (LWP 10874)]
[00000337] main interface debug: thread started
[00000337] main interface debug: thread 2979044240 (interface) created at priority 0 (interface/interface.c:150)
[00000338] main interface debug: looking for interface module: 14 candidates
Remote control interface initialized. Type `help' for help.
[00000338] main interface debug: using interface module "rc"
[00000338] main interface debug: TIMER module_Need() : 2.617 ms - Total 2.617 ms / 1 intvls (Avg 2.617 ms)
[New Thread 0xb1108b90 (LWP 10875)]
[00000338] main interface debug: thread started
[00000338] main interface debug: thread 2970651536 (interface) created at priority 0 (interface/interface.c:150)
[00000327] main playlist debug: starting new item
[00000327] main playlist debug: processing request item null node Playlist skip 0
[00000327] main playlist debug: creating new input thread
[New Thread 0xb0907b90 (LWP 10876)]
[00000339] main input debug: thread started
[00000339] main input debug: waiting for thread completion
[00000340] main stream output debug: stream=`transcode'
[00000341] main generic debug: looking for sout stream module: 1 candidate
[00000340] main stream output debug: stream=`std'
[00000343] main generic debug: looking for sout stream module: 1 candidate
[00000343] main generic debug: set config option: sout-standard-access to http
[00000343] main generic debug: set config option: sout-standard-mux to ts
[00000343] main generic debug: set config option: sout-standard-dst to 192.168.144.78:8586
[00000343] stream_out_standard generic debug: creating `http/ts://192.168.144.78:8586'
[00000343] stream_out_standard generic debug: extension is 78:8586
[00000343] stream_out_standard generic debug: extension -> mux=(null)
[00000343] stream_out_standard generic debug: using `http/ts://192.168.144.78:8586'
[00000344] main generic debug: looking for sout access module: 1 candidate
[00000344] main generic: creating httpd
[00000344] main generic debug: net: listening to 192.168.144.78 port 8586
[00000339] main input debug: thread 2962258832 (input) created at priority 10 (input/input.c:357)
[New Thread 0xb0106b90 (LWP 10877)]
[00000346] main http server debug: thread started
[00000346] main http server debug: thread 2953866128 (httpd host thread) created at priority 0 (network/httpd.c:1107)
[00000344] main generic debug: using sout access module "access_output_http"
[00000344] main generic debug: TIMER module_Need() : 17.848 ms - Total 17.848 ms / 1 intvls (Avg 17.848 ms)
[00000343] stream_out_standard generic debug: access opened
[00000347] main generic debug: looking for sout mux module: 1 candidate
[00000347] mux_ts generic debug: shaping=200000 pcr=70000 dts_delay=400000
[00000347] main generic debug: using sout mux module "mux_ts"
[00000347] main generic debug: TIMER module_Need() : 7.945 ms - Total 7.945 ms / 1 intvls (Avg 7.945 ms)
[00000340] main stream output debug: muxer support adding stream at any time
[00000343] stream_out_standard generic debug: mux opened
[00000343] main generic debug: using sout stream module "stream_out_standard"
[00000343] main generic debug: TIMER module_Need() : 35.212 ms - Total 35.212 ms / 1 intvls (Avg 35.212 ms)
[00000341] main generic debug: set config option: sout-transcode-venc to x264
[00000341] main generic debug: set config option: sout-transcode-acodec to mp3
[00000341] main generic debug: set config option: sout-transcode-vb to 300
[00000341] main generic debug: set config option: sout-transcode-ab to 64
[00000341] main generic debug: set config option: sout-transcode-samplerate to 24000
[00000341] main generic debug: set config option: sout-transcode-scale to 1
[00000341] main generic debug: set config option: sout-transcode-channels to 1
[00000341] main generic debug: set config option: sout-transcode-sfilter to marq
[00000341] main generic debug: set config option: sout-transcode-threads to 3
[00000341] stream_out_transcode generic debug: codec audio=mp3 24000Hz 1 channels 64Kb/s
[00000349] main generic debug: looking for sub filter module: 1 candidate
[00000349] main generic debug: using sub filter module "marq"
[00000349] main generic debug: TIMER module_Need() : 3.320 ms - Total 3.320 ms / 1 intvls (Avg 3.320 ms)
[00000348] main subpicture debug: Filter 'marq' (0x81fb60c) appended to chain
[00000341] main generic debug: using sout stream module "stream_out_transcode"
[00000341] main generic debug: TIMER module_Need() : 60.924 ms - Total 60.924 ms / 1 intvls (Avg 60.924 ms)
[00000339] main input debug: `udp://@239.252.10.1:5000' gives access `udp' demux `' path `@239.252.10.1:5000'
[00000339] main input debug: creating demux: access='udp' demux='' path='@239.252.10.1:5000'
[00000350] main demux debug: looking for access_demux module: 0 candidates
[00000350] main demux warning: no access_demux module matched "udp"
[00000350] main demux debug: TIMER module_Need() : 1.632 ms - Total 1.632 ms / 1 intvls (Avg 1.632 ms)
[00000339] main input debug: creating access 'udp' path='@239.252.10.1:5000'
[00000351] main access debug: looking for access module: 1 candidate
[00000351] access_udp access debug: opening server=:0 local=239.252.10.1:5000
[00000351] main access debug: net: opening 239.252.10.1 datagram port 5000
[00000351] main access debug: Multicast group join request
[00000351] main access debug: using access module "access_udp"
[00000351] main access debug: TIMER module_Need() : 5.016 ms - Total 5.016 ms / 1 intvls (Avg 5.016 ms)
[00000352] main stream debug: Using AStream*Block
[00000352] main stream debug: pre buffering
[00000352] main stream debug: received first data for our buffer
[00000352] main stream debug: prebuffering done 32900 bytes in 0s - 525 kbytes/s
[00000339] main input debug: creating demux: access='udp' demux='' path='@239.252.10.1:5000'
[00000353] main demux debug: looking for demux module: 50 candidates
[00000353] main demux debug: using demux module "ts"
[00000353] main demux debug: TIMER module_Need() : 4.407 ms - Total 4.407 ms / 1 intvls (Avg 4.407 ms)
[00000353] ts demux debug: DEMUX_SET_GROUP 0 (nil)
[00000339] main input debug: starting in async mode
[00000351] access_udp access warning: unimplemented query in control
[00000339] main input debug: `udp://@239.252.10.1:5000' successfully opened
[00000353] ts demux debug: pid[101] unknown
[00000353] ts demux debug: pid[104] unknown
[00000353] ts demux debug: pid[102] unknown
[00000339] main input debug: control type=1
libdvbpsi error (PSI decoder): TS discontinuity (received 14, expected 0) for PID 0
[00000353] ts demux debug: PATCallBack called
[00000353] ts demux debug: new PAT ts_id=1 version=2 current_next=1
[00000353] ts demux debug: * number=1 pid=100
libdvbpsi error (PSI decoder): TS discontinuity (received 14, expected 0) for PID 100
[00000353] ts demux debug: PMTCallBack called
[00000353] ts demux debug: new PMT program number=1 version=1 pid_pcr=101
[00000353] ts demux debug: * es pid=101 type=2 fcc=mpgv
[00000339] main input debug: selecting program id=1
[00000354] main packetizer debug: looking for packetizer module: 17 candidates
[00000354] main packetizer debug: using packetizer module "packetizer_mpegvideo"
[00000354] main packetizer debug: TIMER module_Need() : 2.052 ms - Total 2.052 ms / 1 intvls (Avg 2.052 ms)
[New Thread 0xaf3f7b90 (LWP 10878)]
[00000354] main packetizer debug: thread started
[00000354] main packetizer debug: thread 2940173200 (decoder) created at priority 0 (input/decoder.c:217)
[00000353] ts demux debug: * es pid=104 type=6 dr->i_tag=0x56
[00000353] ts demux debug: * EBU Teletext descriptor
[00000353] ts demux debug: * es pid=104 type=6 fcc=telx
[00000353] ts demux debug: * es pid=102 type=3 fcc=mpga
[00000355] main packetizer debug: looking for packetizer module: 17 candidates
[00000355] main packetizer debug: using packetizer module "mpeg_audio"
[00000355] main packetizer debug: TIMER module_Need() : 1.853 ms - Total 1.853 ms / 1 intvls (Avg 1.853 ms)
[New Thread 0xaebf6b90 (LWP 10879)]
[00000355] main packetizer debug: thread started
[00000355] main packetizer debug: thread 2931780496 (decoder) created at priority 5 (input/decoder.c:217)
[00000353] ts demux warning: first packet for pid=104 cc=0x3
[00000353] ts demux warning: first packet for pid=102 cc=0xd
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000355] mpeg_audio packetizer debug: MPGA channels:1 samplerate:48000 bitrate:192
[00000340] main stream output debug: adding a new sout input (sout_input:0x821c608)
[00000341] stream_out_transcode generic debug: creating audio transcoding from fcc=`mpga' to fcc=`mp3 '
[00000356] main decoder debug: looking for decoder module: 26 candidates
[00000356] main decoder debug: using decoder module "mpeg_audio"
[00000356] main decoder debug: TIMER module_Need() : 0.517 ms - Total 0.517 ms / 1 intvls (Avg 0.517 ms)
[00000357] main encoder debug: looking for encoder module: 8 candidates
[00000357] avcodec encoder debug: libavcodec initialized (interface 3356930 )
[00000357] avcodec encoder debug: found encoder MPEG Audio layer 1/2/3
[00000357] main encoder debug: using encoder module "avcodec"
[00000357] main encoder debug: TIMER module_Need() : 15.695 ms - Total 15.695 ms / 1 intvls (Avg 15.695 ms)
[00000358] main generic debug: looking for audio filter2 module: 5 candidates
[00000358] mpgatofixed32 generic debug: mpga->fl32, bits per sample: 0
[00000358] main generic debug: using audio filter2 module "mpgatofixed32"
[00000358] main generic debug: TIMER module_Need() : 2.436 ms - Total 2.436 ms / 1 intvls (Avg 2.436 ms)
[00000341] main generic debug: Filter 'mpgatofixed32' (0x82338e4) appended to chain
[00000359] main generic debug: looking for audio filter2 module: 5 candidates
[00000359] audio_format generic debug: fl32->s16l, bits per sample: 32
[00000359] main generic debug: using audio filter2 module "audio_format"
[00000359] main generic debug: TIMER module_Need() : 2.765 ms - Total 2.765 ms / 1 intvls (Avg 2.765 ms)
[00000341] main generic debug: Filter 'audio_format' (0x82342cc) appended to chain
[00000347] main generic debug: adding a new input
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000347] mux_ts generic debug: adding input codec=mpga pid=68
[00000347] mux_ts generic debug: new PCR PID is 68
[00000355] main packetizer debug: switching to sync mode
[00000356] mpeg_audio decoder debug: MPGA channels:1 samplerate:48000 bitrate:192
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000354] packetizer_mpegvideo packetizer debug: waiting for sequence start
[00000354] packetizer_mpegvideo packetizer debug: size 704x576 fps=25.000
[00000340] main stream output debug: adding a new sout input (sout_input:0x8219c90)
[00000341] stream_out_transcode generic debug: creating video transcoding from fcc=`mpgv' to fcc=` '
[00000360] main decoder debug: looking for decoder module: 26 candidates
[00000360] avcodec decoder debug: libavcodec already initialized
[00000360] avcodec decoder debug: using direct rendering
[00000360] avcodec decoder debug: ffmpeg codec (MPEG-2 Video) started
[00000360] main decoder debug: using decoder module "avcodec"
[00000360] main decoder debug: TIMER module_Need() : 2.513 ms - Total 2.513 ms / 1 intvls (Avg 2.513 ms)
[00000361] main encoder debug: looking for encoder module: 1 candidate
[00000361] x264 encoder debug: version x264 0.60.X
x264 [info]: using threads=3
x264 [info]: using cpu capabilities: MMX2 SSE2Fast SSSE3 Cache64
[00000361] main encoder debug: using encoder module "x264"
[00000361] main encoder debug: TIMER module_Need() : 20.902 ms - Total 20.902 ms / 1 intvls (Avg 20.902 ms)
[00000361] main encoder debug: removing module "x264"
[New Thread 0xada16b90 (LWP 10880)]
[00000342] main generic debug: thread started
[00000342] main generic debug: thread 2913037200 (encoder) created at priority 0 (transcode.c:1555)
[00000341] stream_out_transcode generic debug: decoder aspect is 576000:432000
[00000341] stream_out_transcode generic debug: source pixel aspect is 1.090909:1
[00000341] stream_out_transcode generic debug: scaled pixel aspect is 1.090909:1
[00000341] stream_out_transcode generic debug: source 704x576, destination 704x576
[00000341] stream_out_transcode generic debug: encoder aspect is 576000:432000
[00000341] stream_out_transcode generic debug: destination (after video filters) 704x576
[00000361] main encoder debug: looking for encoder module: 1 candidate
[00000361] x264 encoder debug: version x264 0.60.X
x264 [info]: using threads=3
x264 [info]: using SAR=12/11
x264 [info]: using cpu capabilities: MMX2 SSE2Fast SSSE3 Cache64
[00000361] main encoder debug: using encoder module "x264"
[00000361] main encoder debug: TIMER module_Need() : 17.222 ms - Total 17.222 ms / 1 intvls (Avg 17.222 ms)
[00000347] main generic debug: adding a new input
[00000347] mux_ts generic debug: adding input codec=h264 pid=69
[00000347] mux_ts generic debug: new PCR PID is 69
Program received signal SIGFPE, Arithmetic exception.
[Switching to Thread 0xaf3f7b90 (LWP 10878)]
0xb51de286 in transcode_video_process (p_stream=0x81ed78c, id=0x82553c8, in=0x828bcf8, out=0xaf3f726c) at transcode.c:1986
1986 fmt.i_sar_num = fmt.i_aspect * fmt.i_height / fmt.i_width;
(gdb) bt
#0 0xb51de286 in transcode_video_process (p_stream=0x81ed78c, id=0x82553c8, in=0x828bcf8, out=0xaf3f726c) at transcode.c:1986
#1 0xb51db721 in Send (p_stream=0x81ed78c, id=0x82553c8, p_buffer=0x828bcf8) at transcode.c:1015
#2 0xb7ee6840 in sout_InputSendBuffer (p_input=0x8219c90, p_buffer=0x828bcf8) at stream_output/stream_output.c:284
#3 0xb7e752d6 in DecoderDecode (p_dec=0x82148c4, p_block=0x827ac20) at input/decoder.c:930
#4 0xb7e741fa in DecoderThread (p_dec=0x82148c4) at input/decoder.c:591
#5 0xb7ec8460 in thread_entry (data=0x81ed1d8) at misc/threads.c:467
#6 0xb7cd44fb in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7 0xb7dbde5e in clone () from /lib/tls/i686/cmov/libc.so.6