Fixed segfault when using sfilter in transocde (close #1663)